--- a/package.json
+++ b/package.json
@@ -39,8 +39,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged && npm run test:api && npm run update-json-doc",
-      "pre-push": "npm test"
+      "pre-commit": "lint-staged && npm run test:api && npm run update-json-doc"
     }
   },
   "author": "getgauge",
